--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 /* Start Global Rules */
 :root {
+  --main-color: #2196f3;
+  --main-color-alt: #1787e0;
+  --main-transition: 0.3s;
+  --main-padding-top: 100px;
+  --main-padding-bottom: 100px;
+  --section-background: #ececec;
 }
 
 html {
@@ -16,6 +22,10 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 ul {
@@ -49,3 +59,77 @@ ul {
   }
 }
 /* End Global Rules */
+/* Start Header */
+header {
+  background-color: #ffffff;
+  position: relative;
+  box-shadow: 0 0 10px #ddd;
+}
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+}
+header .container .logo {
+  color: var(--main-color);
+  font-size: 26px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 72px;
+}
+@media (max-width: 767px) {
+  header .container .logo {
+    width: 100%;
+    height: 50%;
+  }
+}
+header .container .main-nav {
+  display: flex;
+}
+@media (max-width: 767px) {
+  header .main-nav {
+    margin: auto;
+  }
+}
+header .container .main-nav > li > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 72px;
+  position: relative;
+  overflow: hidden;
+  font-size: 18px;
+  transition: var(--main-transition);
+  color: black;
+  padding: 0 30px;
+  text-transform: capitalize;
+}
+@media (max-width: 767px) {
+  header .container .main-nav > li > a {
+    padding: 10px;
+    font-size: 14px;
+    height: 40px;
+  }
+}
+header .container .main-nav > li > a::before {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--main-color);
+  top: 0;
+  left: -100%;
+  position: absolute;
+  transition: var(--main-transition);
+}
+header .container .main-nav > li > a:hover {
+  color: #1787e0;
+  background-color: #fafafa;
+}
+header .container .main-nav > li > a:hover::before {
+  left: 0;
+}
+/* End Header */
