--- a/css/main.css
+++ b/css/main.css
@@ -133,3 +133,60 @@ header .container .main-nav > li > a:hover::before {
   left: 0;
 }
 /* End Header */
+/* Start Landing */
+.landing {
+  position: relative;
+}
+.landing::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -30px;
+  left: 0;
+  background-color: var(--section-background);
+  z-index: -1;
+  transform: skewY(-6deg);
+  transform-origin: 0 0;
+}
+.landing .container {
+  position: relative;
+  min-height: calc(100vh - 72px);
+  display: flex;
+  align-items: center;
+  align-items: center;
+  padding-bottom: 120px;
+}
+.landing .container .text {
+  flex: 1;
+}
+.landing .container .text h1 {
+  font-size: 40px;
+  letter-spacing: -2px;
+  margin: 0;
+}
+.landing .container .text p {
+  font-size: 20px;
+  line-height: 1.7;
+  margin: 15px 0 0;
+  color: #666;
+  max-width: 500px;
+}
+.landing .image img {
+  width: 600px;
+  position: relative;
+}
+.landing .go-down {
+  color: var(--main-color);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30px;
+  transition: var(--main-transition);
+}
+.landing .go-down:hover {
+  color: var(--main-color-alt);
+}
+.landing .go-down {
+}
+/* End Landing */
