--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,81 @@ header .container .main-nav > li > a:hover {
 header .container .main-nav > li > a:hover::before {
   left: 0;
 }
+header .mega-menu {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: calc(100% + 50px);
+  z-index: -1;
+  opacity: 0;
+  display: flex;
+  gap: 40px;
+  background-color: white;
+  padding: 30px;
+  border-bottom: 3px solid var(--main-color);
+  transition: top var(--main-transition), opacity var(--main-transition);
+}
+.active-menu {
+  z-index: 200 !important;
+  top: calc(100% + 1px) !important;
+  opacity: 1 !important;
+  left: -14px !important;
+  border-radius: 6px;
+}
+@media (max-width: 767px) {
+  header .mega-menu {
+    flex-direction: column;
+    padding: 5px;
+    gap: 0;
+  }
+}
+header .mega-menu .image img {
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  header .mega-menu .image img {
+    display: none;
+  }
+}
+header .mega-menu .links {
+  min-width: 250px;
+  flex: 1;
+}
+header .mega-menu .links li {
+  position: relative;
+}
+header .mega-menu .links li:not(:last-child) {
+  border-bottom: 1px solid #e9e6e6;
+}
+@media (max-width: 767px) {
+  header .mega-menu .links li:last-child {
+    border-bottom: 1px solid #e9e6e6;
+  }
+}
+header .mega-menu .links li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 0;
+  transition: var(--main-transition);
+  z-index: -1;
+  background-color: #e8e8e8;
+}
+header .mega-menu .links li:hover::before {
+  width: 100%;
+}
+header .mega-menu .links li a {
+  padding: 15px;
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  color: var(--main-color);
+}
+header .mega-menu .links li a i {
+  margin-right: 10px;
+}
 /* End Header */
 /* Start Landing */
 .landing {
