--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,64 @@ header .mega-menu .links li a i {
   animation: bouncing 1.5s infinite;
 }
 /* End Landing */
-
+/* Start Articles */
+.articles {
+  position: relative;
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+.articles .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 40px;
+}
+.articles .container .box {
+  background-color: white;
+  overflow: hidden;
+  box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+  border-radius: 6px;
+  transition: transform var(--main-transition),
+    box-shadow var(--main-transition);
+}
+.articles .container .box .content {
+  padding: 20px;
+}
+.articles .container .box .content h3 {
+  margin: 0;
+}
+.articles .container .box .content p {
+  margin: 10px 0 0;
+  color: #777;
+  line-height: 1.6;
+  font-size: 0.9rem;
+}
+.articles .container .box .info {
+  padding: 20px;
+  border-top: 1px solid #e6e6e7;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.articles .container .box .info a {
+  color: var(--main-color);
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.articles .container .box .info i {
+  color: var(--main-color);
+}
+.articles .box:hover .info i {
+  animation: moving-arrow 0.6s linear infinite;
+}
+.articles .container .box:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+}
+.articles .container .box img {
+  width: 100%;
+  max-width: 100%;
+}
+/* End Articles */
 /* Start Animation */
 @keyframes up-and-down {
   0%,
@@ -382,6 +439,11 @@ header .mega-menu .links li a i {
     width: 50%;
     height: 100%;
     border-radius: 0;
+  }
+}
+@keyframes moving-arrow {
+  100% {
+    transform: translateX(10px);
   }
 }
 /* End Animation */
