--- a/css/main.css
+++ b/css/main.css
@@ -604,6 +604,100 @@ header .mega-menu .links li a i {
   margin-bottom: 0;
 }
 /* End Testimonials */
+/* Start Team Members */
+.team-members {
+  position: relative;
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+.team-members .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 30px;
+}
+.team-members .box {
+  position: relative;
+}
+.team-members .box::before,
+.team-members .box::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 10px;
+  background-color: #f3f3f3;
+  width: 100%;
+  height: 100%;
+  transition: var(--main-transition);
+}
+.team-members .box::before {
+  width: calc(100% - 60px);
+  z-index: -2;
+}
+.team-members .box::after {
+  background-color: #e4e4e4;
+  z-index: -1;
+  width: 0;
+}
+.team-members .box:hover::after {
+  width: calc(100% - 60px);
+}
+.team-members .box .data {
+  display: flex;
+  align-items: center;
+  padding-top: 60px;
+}
+.team-members .box .data .social {
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+  align-items: center;
+  gap: 20px;
+}
+.team-members .box .data .social a {
+  width: 60px;
+  height: 30px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.team-members .box .data .social i {
+  color: #777;
+  transition: var(--main-transition);
+}
+.team-members .box .data .social a:hover i {
+  color: var(--main-color);
+}
+.team-members .box img {
+  width: calc(100% - 60px);
+  transition: var(--main-transition);
+  border-radius: 10px;
+}
+.team-members .box:hover img {
+  filter: grayscale(100%);
+}
+.team-members .box .info {
+  padding-left: 80px;
+}
+.team-members .box .info h3 {
+  margin-bottom: 0;
+  margin-top: 20px;
+  color: var(--main-color);
+  font-size: 22px;
+  transition: var(--main-transition);
+  text-transform: capitalize;
+}
+.team-members .box:hover h3 {
+  color: #777;
+}
+.team-members .box .info p {
+  margin-top: 10px;
+  margin-bottom: 25px;
+  font-weight: bold;
+}
+
+/* End Team Members */
 /* Start Animation */
 @keyframes up-and-down {
   0%,
