--- a/css/main.css
+++ b/css/main.css
@@ -698,6 +698,91 @@ header .mega-menu .links li a i {
 }
 
 /* End Team Members */
+/* Start Services */
+.services {
+  position: relative;
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-color: var(--section-background);
+}
+.services .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+}
+.services .container .box {
+  background-color: white;
+  box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+  position: relative;
+  counter-increment: services;
+  transition: var(--main-transition);
+}
+.services .container .box:hover {
+  transform: translateY(-10px);
+}
+.services .container .box:hover::before {
+  width: 100%;
+}
+.services .container .box::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 50%;
+  height: 3px;
+  transform: translateX(-50%);
+  height: 3px;
+  background-color: var(--main-color);
+  transition: var(--main-transition);
+  width: 0;
+}
+.services .container .box > i {
+  display: block;
+  margin: 30px auto 20px;
+  text-align: center;
+  color: #d5d5d5;
+}
+.services .container .box > h3 {
+  color: var(--main-color);
+  font-size: 25px;
+  margin: 20px 0 40px;
+  text-align: center;
+}
+.services .container .box .info {
+  padding: 15px;
+  position: relative;
+  background-color: #f9f9f9;
+  text-align: right;
+}
+.services .container .box .info::before {
+  content: "0" counter(services);
+  position: absolute;
+  height: 100%;
+  width: 80px;
+  background-color: var(--main-color);
+  color: white;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  padding-right: 15px;
+}
+.services .container .box .info::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  top: 0;
+  left: 80px;
+  background-color: #d5d5d5;
+  height: calc(100% + 0.1px);
+  transform: skewX(-30deg);
+}
+.services .container .box .info a {
+  color: var(--main-color);
+}
+/* End Services */
 /* Start Animation */
 @keyframes up-and-down {
   0%,
