--- a/css/main.css
+++ b/css/main.css
@@ -783,7 +783,53 @@ header .mega-menu .links li a i {
   color: var(--main-color);
 }
 /* End Services */
-/* Start Animation */
+/* Start Our-skills */
+/* Start Our-skills */
+.our-skills {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  position: relative;
+  background-color: white;
+}
+.our-skills .container {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .our-skills .container img {
+    display: none;
+  }
+}
+.our-skills .container .skills {
+  flex: 1;
+}
+.our-skills .container .skill h3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 18px 0;
+}
+.our-skills .container .skill h3 span {
+  color: var(--main-color);
+  font-size: 12px;
+  border: 1px solid #ccc;
+  padding: 3px 5px;
+  border-radius: 4px;
+}
+.our-skills .container .skill .the-progress {
+  position: relative;
+  background-color: #eee;
+  height: 30px;
+}
+.our-skills .container .skill .the-progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transition: var(--main-transition);
+  background-color: var(--main-color);
+}
+/* End Animation */
 @keyframes up-and-down {
   0%,
   100% {
