--- a/css/main.css
+++ b/css/main.css
@@ -828,7 +828,82 @@ header .mega-menu .links li a i {
   transition: var(--main-transition);
   background-color: var(--main-color);
 }
-/* End Our-skills*/
+/* End Our-skills */
+/* Start Work Steps */
+.work-steps {
+  position: relative;
+  background-color: var(--section-background);
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+}
+.work-steps .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (max-width: 991px) {
+  .work-steps .container {
+    flex-direction: column;
+  }
+  .work-steps .image {
+    margin: 0 0 50px;
+  }
+}
+.work-steps .container .info .box {
+  display: flex;
+  align-items: center;
+  background-color: #f6f5f5;
+  border: 2px solid white;
+  border-radius: 6px;
+  margin-bottom: 20px;
+  padding: 30px;
+  position: relative;
+  z-index: 1;
+}
+@media (max-width: 767px) {
+  .work-steps .container .info .box {
+    flex-direction: column;
+    text-align: center;
+  }
+  .work-steps .container .info .box img {
+    margin: 0 0 30px !important;
+  }
+}
+.work-steps .container .info .box::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ededed;
+  z-index: -1;
+  transition: var(--main-transition);
+}
+.work-steps .container .info .box:hover::before {
+  width: 100%;
+  height: 100%;
+}
+.work-steps .image {
+  max-width: 100%;
+  margin-right: 100px;
+}
+.work-steps .container .info .box img {
+  width: 64px;
+  margin-right: 30px;
+}
+.work-steps .container .info .box h3 {
+  font-size: 22px;
+  margin: 0;
+}
+.work-steps .container .info .box p {
+  margin: 10px 0 0;
+  color: #777;
+  line-height: 1.7;
+  font-size: 18px;
+}
+/* End Work Steps */
 /* End Animation */
 @keyframes up-and-down {
   0%,
