--- a/css/main.css
+++ b/css/main.css
@@ -904,6 +904,133 @@ header .mega-menu .links li a i {
   font-size: 18px;
 }
 /* End Work Steps */
+/* Start Events */
+.events {
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-color: white;
+  position: relative;
+}
+.events .container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.events .container .info {
+  flex: 1;
+}
+.events .info .time {
+  display: flex;
+  margin: 20px auto;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+}
+.events .info .time .unit {
+  border: 1px solid #d4d4d4;
+  width: 75px;
+  text-align: center;
+  border-radius: 6px;
+  transition: var(--main-transition);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.events .info .time .unit span {
+  display: block;
+  transition: var(--main-transition);
+}
+.events .info .unit span:first-child {
+  color: var(--main-color);
+  font-size: 35px;
+  padding: 15px;
+  font-weight: bold;
+}
+.events .info .unit span:last-child {
+  padding: 8px 10px;
+  border-top: 1px solid #d4d4d4;
+  font-size: 14px;
+  font-weight: 600;
+  width: 100%;
+}
+.events .info .unit:hover {
+  border-color: var(--main-color);
+}
+.events .info .unit:hover span:last-child {
+  border-color: var(--main-color);
+}
+.events .info h2 {
+  text-align: center;
+  margin: 40px 0 0;
+  font-size: 30px;
+}
+.events .info p {
+  text-align: center;
+  font-size: 18px;
+  color: #777;
+  line-height: 1.7;
+  margin: 19px 0;
+}
+.events .container img {
+  max-width: 450px;
+}
+@media (max-width: 991px) {
+  .events .container img {
+    display: none;
+  }
+}
+.events .container .subscribe {
+  width: 100%;
+  margin-top: 50px;
+}
+.events .container .subscribe form {
+  width: 600px;
+  margin: 20px auto;
+  background-color: #f6f5f5;
+  padding: 30px 40px;
+  border-radius: 50px;
+  display: flex;
+  gap: 20px;
+}
+@media (max-width: 767px) {
+  .events .container .subscribe form {
+    max-width: 100%;
+    padding: 20px;
+    flex-direction: column;
+    border-radius: 0;
+  }
+  .events .container .subscribe form input[type="email"] {
+    border-radius: 0 !important;
+  }
+  .events .container .subscribe form input[type="submit"] {
+    border-radius: 50px !important;
+    width: 80%;
+    margin: auto;
+  }
+}
+.events .container .subscribe form input[type="email"] {
+  flex: 1;
+  padding: 20px;
+  border-radius: 50px;
+  border: none;
+  caret-color: var(--main-color);
+}
+.events .container .subscribe form input[type="submit"] {
+  border-radius: 50px;
+  border: none;
+  background-color: var(--main-color);
+  color: white;
+  font-weight: bold;
+  padding: 20px;
+  cursor: pointer;
+  transition: var(--main-transition);
+  text-transform: uppercase;
+}
+.events .container .subscribe form input[type="submit"]:hover {
+  background-color: var(--main-color-alt);
+}
+/* End Events */
 /* End Animation */
 @keyframes up-and-down {
   0%,
