--- a/css/main.css
+++ b/css/main.css
@@ -1228,6 +1228,58 @@ header .mega-menu .links li a i {
   max-width: 100%;
 }
 /* End videos */
+/* Start Stats */
+.stats {
+  position: relative;
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
+  background-color: var(--section-background);
+}
+.stats .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+.stats .container .box {
+  position: relative;
+  padding: 20px;
+  text-align: center;
+  background-color: white;
+}
+.stats .container .box::before,
+.stats .container .box::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 0;
+  transition: all 1s ease 0s;
+  background-color: var(--main-color);
+}
+.stats .container .box::before {
+  bottom: 0;
+  left: 0;
+}
+.stats .container .box::after {
+  top: 0;
+  right: 0;
+}
+.stats .container .box:hover::before,
+.stats .container .box:hover::after {
+  height: 100%;
+}
+.stats .container .box .number {
+  display: block;
+  font-size: 50px;
+  font-weight: bold;
+  padding: 10px 0;
+}
+.stats .container .box .clients {
+  color: var(--main-color);
+  font-style: italic;
+  font-size: 20px;
+  font-weight: bold;
+}
+/* End Stats */
 /* End Animation */
 @keyframes up-and-down {
   0%,
